--- a/localisation/english/nhsc_armor_l_english.yml
+++ b/localisation/english/nhsc_armor_l_english.yml
@@ -38,7 +38,7 @@ LARGE_NHSC_NANO_ARMOR_1: "Large $NHSC_NANO_ARMOR_1$"
 LARGE_NHSC_NANO_ARMOR_1_DESC: "$NHSC_NANO_ARMOR_1_DESC$"
 
 NHSC_NANO_ARMOR_2: "Improved Nano-material Armor"
-NHSC_NANO_ARMOR_2_DESC: "An improved version of the nanity-infused armor. It's tougher and can self-repair faster."
+NHSC_NANO_ARMOR_2_DESC: "An improved version of nanite-infused armor. It's tougher and can self-repair faster."
 SMALL_NHSC_NANO_ARMOR_2: "Small $NHSC_NANO_ARMOR_2$"
 SMALL_NHSC_NANO_ARMOR_2_DESC: "$NHSC_NANO_ARMOR_2_DESC$"
 MEDIUM_NHSC_NANO_ARMOR_2: "Medium $NHSC_NANO_ARMOR_2$"
@@ -51,7 +51,7 @@ LARGE_NHSC_NANO_ARMOR_2_DESC: "$NHSC_NANO_ARMOR_2_DESC$"
 ########################################
 
 NHSC_SHIELD_ARMOR_1: "Shield-Generating Armor"
-NHSC_SHIELD_ARMOR_1_DESC: "By adding nanities programmed to manipulate ambient energies, we're able to create armor that generates small amount of additional shields to protect the ship with."
+NHSC_SHIELD_ARMOR_1_DESC: "By adding nanities programmed to manipulate ambient energies, we're able to create armor that generates a small amount of additional shields to protect the ship."
 SMALL_NHSC_SHIELD_ARMOR_1: "Small $NHSC_SHIELD_ARMOR_1$"
 SMALL_NHSC_SHIELD_ARMOR_1_DESC: "$NHSC_SHIELD_ARMOR_1_DESC$"
 MEDIUM_NHSC_SHIELD_ARMOR_1: "Medium $NHSC_SHIELD_ARMOR_1$"
@@ -60,7 +60,7 @@ LARGE_NHSC_SHIELD_ARMOR_1: "Large $NHSC_SHIELD_ARMOR_1$"
 LARGE_NHSC_SHIELD_ARMOR_1_DESC: "$NHSC_SHIELD_ARMOR_1_DESC$"
 
 NHSC_SHIELD_ARMOR_2: "Improved Shield-Generating Armor"
-NHSC_SHIELD_ARMOR_2_DESC: "An improved version of the shield-generating armor. It's tougher and generates more shields."
+NHSC_SHIELD_ARMOR_2_DESC: "An improved version of shield-generating armor. It's tougher and generates more shields."
 SMALL_NHSC_SHIELD_ARMOR_2: "Small $NHSC_SHIELD_ARMOR_2$"
 SMALL_NHSC_SHIELD_ARMOR_2_DESC: "$NHSC_SHIELD_ARMOR_2_DESC$"
 MEDIUM_NHSC_SHIELD_ARMOR_2: "Medium $NHSC_SHIELD_ARMOR_2$"
@@ -82,7 +82,7 @@ LARGE_NHSC_SHIELD_ARMOR_3_DESC: "$NHSC_SHIELD_ARMOR_3_DESC$"
 ########################################
 
 NHSC_DRAGON_NANOARMOR: "Nanomachine-Infused Dragonscale Armor"
-NHSC_DRAGON_NANOARMOR_DESC: "Introduction of nanomachines into dragonscale armor can further improve it's incredible toughness."
+NHSC_DRAGON_NANOARMOR_DESC: "Introduction of nanomachines into dragonscale armor can further improve its incredible toughness."
 SMALL_NHSC_DRAGON_NANOARMOR: "Small $NHSC_DRAGON_NANOARMOR$"
 SMALL_NHSC_DRAGON_NANOARMOR_DESC: "$NHSC_DRAGON_NANOARMOR_DESC$"
 MEDIUM_NHSC_DRAGON_NANOARMOR: "Medium $NHSC_DRAGON_NANOARMOR$"
@@ -100,7 +100,7 @@ LARGE_NHSC_HARDLIGHT_ARMOR: "Large $NHSC_HARDLIGHT_ARMOR$"
 LARGE_NHSC_HARDLIGHT_ARMOR_DESC: "$NHSC_HARDLIGHT_ARMOR_DESC$"
 
 NHSC_HORROR_ARMOR: "Dimensional Horror Armor"
-NHSC_HORROR_ARMOR_DESC: "An incredibly-tough material modelled after the hide of Lovecraftian moster known as the Dimensional Horror."
+NHSC_HORROR_ARMOR_DESC: "An incredibly-tough material modelled after the hide of the Lovecraftian monster known as the Dimensional Horror."
 SMALL_NHSC_HORROR_ARMOR: "Small $NHSC_HORROR_ARMOR$"
 SMALL_NHSC_HORROR_ARMOR_DESC: "$NHSC_HORROR_ARMOR_DESC$"
 MEDIUM_NHSC_HORROR_ARMOR: "Medium $NHSC_HORROR_ARMOR$"
@@ -113,7 +113,7 @@ LARGE_NHSC_HORROR_ARMOR_DESC: "$NHSC_HORROR_ARMOR_DESC$"
 ########################################
 
 NHSC_CRYSTAL_ARMOR_3: "Reinforced Crystalline Plating"
-NHSC_CRYSTAL_ARMOR_3_DESC: "A next-generation crystalline hull plating, desined to utilize the incredible sturdiness of crystalline materials to its full potential."
+NHSC_CRYSTAL_ARMOR_3_DESC: "A next-generation crystalline hull plating, designed to utilize the incredible sturdiness of crystalline materials to its full potential."
 SMALL_NHSC_CRYSTAL_ARMOR_3: "Small $NHSC_CRYSTAL_ARMOR_3$"
 SMALL_NHSC_CRYSTAL_ARMOR_3_DESC: "$NHSC_CRYSTAL_ARMOR_3_DESC$"
 MEDIUM_NHSC_CRYSTAL_ARMOR_3: "Medium $NHSC_CRYSTAL_ARMOR_3$"
