--- a/localisation/english/nhsc_buildings_l_english.yml
+++ b/localisation/english/nhsc_buildings_l_english.yml
@@ -3,7 +3,7 @@
 ### ENGLISH LOCALIZATION
 
 nhsc_building_centralresearchbureau: "Central Research Bureau"
-nhsc_building_centralresearchbureau_desc: "A place where the brightest minds of the Empire gather together to advance the science."
+nhsc_building_centralresearchbureau_desc: "A place where the brightest minds of our Empire gather together to advance the sciences."
 
 nhsc_building_culture_nexus: "Culture Nexus"
 nhsc_building_culture_nexus_desc: "A place where people of our Empire can learn about the galaxy and various cultures that inhabit it."
@@ -15,31 +15,31 @@ nhsc_building_network_regulator_desc: "A specialized processing node that re-dis
 job_esc_network_curator_effect_desc: "£job_esc_network_curator£ $job_esc_network_curator_plural$ manage the data flow within the Machine Intelligence, producing £unity£ §Y$unity$§!."
 
 nhsc_building_materials_laboratory: "Advanced Materials Laboratory"
-nhsc_building_materials_laboratory_desc: "A large laboratory dedicated to development better materials, both for special projects and everyday use."
+nhsc_building_materials_laboratory_desc: "A large laboratory dedicated to the development of better materials, both for special projects and everyday use."
 
 nhsc_building_technology_institute: "Technology Institute"
-nhsc_building_technology_institute_desc: "A large scientific complex dedicated to technological advancement of our Empire."
+nhsc_building_technology_institute_desc: "A large scientific complex dedicated to the technological advancement of our Empire."
 
 nhsc_building_enigmatic_tower: "Enigmatic Energy Collector"
 nhsc_building_enigmatic_tower_desc: "A towering planetside facility that gathers energy produced by Enigmatic Power Cores"
 
 nhsc_building_stellar_energy_tower: "Stellar Energy Tower"
-nhsc_building_stellar_energy_tower_desc: "Massive tower that transforms light elements into pure energy, like a miniature sun."
+nhsc_building_stellar_energy_tower_desc: "A massive tower that transforms light elements into pure energy, like a miniature sun."
 
 nhsc_building_quantum_node: "Quantum Computation Node"
-nhsc_building_quantum_node_desc: "Specialized computer network modelled after the processors of the Infinity Machine"
+nhsc_building_quantum_node_desc: "A specialized computer network modelled after the processors of the Infinity Machine"
 
 nhsc_building_watcher: "Watcher of Eternity"
-nhsc_building_watcher_desc: "A massive complex that bends the reality itself, allowing us to gaze upon past, present and future."
+nhsc_building_watcher_desc: "A massive complex that bends reality itself, allowing us to gaze upon the past, present, and future."
 
 nhsc_building_reprocessing_plant: "Reprocessing Plant"
-nhsc_building_reprocessing_plant_desc: "This advanced recycling and reprocessing plant can pull incredible amount of useful resources out of common trash."
+nhsc_building_reprocessing_plant_desc: "This advanced recycling and reprocessing plant can pull incredible amounts of useful resources out of common trash."
 job_esc_reprocessor_effect_desc: "£job_esc_reprocessor£ $job_esc_reprocessor_plural$ turn £minerals£ §Y$minerals$§! and £energy£ §Y$energy$§! into £consumer_goods£ §Y$consumer_goods$§! and £alloys£ §Y$alloys$§!."
 job_esc_reprocessor_drone_effect_desc: "£job_esc_reprocessor_drone£ $job_esc_reprocessor_drone_plural$ turn £minerals£ §Y$minerals$§! and £food£ §Y$food$§! into £alloys£ §Y$alloys$§!."
 job_esc_reprocessor_unit_effect_desc: "£job_esc_reprocessor_unit£ $job_esc_reprocessor_unit_plural$ turn £minerals£ §Y$minerals$§! and £energy£ §Y$energy$§! into £alloys£ §Y$alloys$§!."
 
 nhsc_building_zro_distillery: "Zro Distillery"
-nhsc_building_zro_distillery_desc: "This advanced processing facility sifts through literal mountains of raw materials to pick tiny crystals of extremely valuable Zro dust."
+nhsc_building_zro_distillery_desc: "This advanced processing facility sifts through mountains of raw materials to pick out tiny crystals of extremely valuable Zro dust."
 job_esc_zro_distiller_effect_desc: "£job_esc_zro_distiller£ $job_esc_zro_distiller_plural$ produces £sr_zro£ $sr_zro$ out of raw materials."
 job_esc_zro_distiller_drone_effect_desc: "£job_esc_zro_distiller_drone£ $job_esc_zro_distiller_drone_plural$ produces £sr_zro£ $sr_zro$ out of raw materials."
 
@@ -50,7 +50,7 @@ job_esc_dark_matter_shaper_drone_effect_desc: "£job_esc_dark_matter_shaper_dron
 job_esc_dark_matter_shaper_unit_effect_desc: "£job_esc_dark_matter_shaper_drone£ $job_esc_dark_matter_shaper_drone_plural$ turn £energy£ §Y$energy$§! and £minerals£ §Y$minerals$§! into £sr_dark_matter£ §Y$sr_dark_matter$§! and £physics_research£ §Y$physics_research$§!"
 
 nhsc_building_magmaminer_1: "Mantle Mining Facility"
-nhsc_building_magmaminer_1_desc: "A megastructural mine that reaches to the very core of the planet. It requires untold amount of workers to operate and can produce tremendous amounts of resources.\n\n§RWARNING: Constructing this building on a non-molten world will permanently reduce max available districts by 5.§!"
+nhsc_building_magmaminer_1_desc: "A megastructural mine that reaches to the very core of the planet. It requires a massive number of workers to operate and can produce tremendous amounts of resources.\n\n§RWARNING: Constructing this building on a non-molten world will permanently reduce max available districts by 5.§!"
 nhsc_building_magmaminer_2: "Improved Mantle Mining Facility"
 nhsc_building_magmaminer_2_desc: "An even larger and more efficient mine to pull valuable resources from the planetary core."
 job_esc_planetary_core_miner_effect_desc: "£job_esc_planetary_core_miner£ $job_esc_planetary_core_miner_plural$ produce large amounts of £minerals£ §Y$minerals$§! by mining planetary mantle and core."
@@ -74,7 +74,7 @@ job_esc_crystal_farmer_drone_effect_desc: "£job_esc_crystal_farmer_drone£ $job
 job_esc_crystal_farmer_unit_effect_desc: "£job_esc_crystal_farmer_unit£ $job_esc_crystal_farmer_unit_plural$ turn £energy£ §Y$energy$§! and £minerals£ §Y$minerals$§! into £esc_living_crystal£ §Y$esc_living_crystal$§! and £alloys£ §Y$alloys$§!."
 
 nhsc_building_psionic_containment: "Psionic Containment"
-nhsc_building_psionic_containment_desc: "A set of infrastructure to gather and condense psionic energies released by the population of this world."
+nhsc_building_psionic_containment_desc: "Infrastructure to gather and condense psionic energies released by the population of this world."
 job_esc_channeller_effect_desc: "£job_esc_channeller£ $job_esc_channeller_plural$ turn £energy£ §Y$energy$§! and £food£ §Y$food$§! into £esc_psionic_charge£ §Y$esc_psionic_charge$§!."
 job_esc_channeller_drone_effect_desc: "£job_esc_channeller_drone£ $job_esc_channeller_drone_plural$ turn £energy£ §Y$energy$§! and £food£ §Y$food$§! into £esc_psionic_charge£ §Y$esc_psionic_charge$§!."
 
@@ -85,31 +85,31 @@ job_esc_gravity_manipulator_drone_effect_desc: "£job_esc_gravity_manipulator_dr
 job_esc_gravity_manipulator_unit_effect_desc: "£job_esc_gravity_manipulator_unit£ $job_esc_gravity_manipulator_unit_plural$ turn £energy£ §Y$energy$§! into £esc_gravitic_anomaly£ §Y$esc_gravitic_anomaly$§!."
 
 nhsc_building_dimensional_breach: "Dimensional Breach"
-nhsc_building_dimensional_breach_desc: "Specialized facilities, containing massive field generators, capable of warping the very fabric of reality."
+nhsc_building_dimensional_breach_desc: "Specialized facilities containing massive field generators, capable of warping the very fabric of reality."
 job_esc_dimension_warper_effect_desc: "£job_esc_dimension_warper£ $job_esc_dimension_warper_plural$ turn £energy£ §Y$energy$§! and £consumer_goods£ §Y$consumer_goods$§! into £esc_transdimensional_vortex£ §Y$esc_transdimensional_vortex$§!."
 job_esc_dimension_warper_drone_effect_desc: "£job_esc_dimension_warper_drone£ $job_esc_dimension_warper_drone_plural$ turn £energy£ §Y$energy$§! and £food£ §Y$food$§! into £esc_transdimensional_vortex£ §Y$esc_transdimensional_vortex$§!."
 job_esc_dimension_warper_unit_effect_desc: "£job_esc_dimension_warper_unit£ $job_esc_dimension_warper_unit_plural$ turn £energy£ §Y$energy$§! into £esc_transdimensional_vortex£ §Y$esc_transdimensional_vortex$§!."
 
 nhsc_building_enigmatic_coil: "Enigmatic Energy Coil"
-nhsc_building_enigmatic_coil_desc: "Massive generators, gathering and amplifying energies, similar to those used by the Enigmatic Fortress."
+nhsc_building_enigmatic_coil_desc: "Massive generators that gather and amplify energies similar to those used by the Enigmatic Fortress."
 job_esc_enigma_reader_effect_desc: "£job_esc_enigma_reader£ $job_esc_enigma_reader_plural$ turn £energy£ §Y$energy$§! and £consumer_goods£ §Y$consumer_goods$§! into £esc_enigmatic_energy£ §Y$esc_enigmatic_energy$§!."
 job_esc_enigma_reader_drone_effect_desc: "£job_esc_enigma_reader_drone£ $job_esc_enigma_reader_drone_plural$ turn £energy£ §Y$energy$§! and £food£ §Y$food$§! into £esc_enigmatic_energy£ §Y$esc_enigmatic_energy$§!."
 job_esc_enigma_reader_unit_effect_desc: "£job_esc_enigma_reader_unit£ $job_esc_enigma_reader_unit_plural$ turn £energy£ §Y$energy$§! into £esc_enigmatic_energy£ §Y$esc_enigmatic_energy$§!."
 
 nhsc_building_dragon_hatchery: "Dragon Hatchery"
-nhsc_building_dragon_hatchery_desc: "A specialized cloning facility constructed for the explicit purpose of cloning the mighty Ether Drake."
+nhsc_building_dragon_hatchery_desc: "A specialized cloning facility constructed for cloning the mighty Ether Drake."
 nhsc_building_dragon_hatchery_queued: "Dragon Hatcher Queued"
 
 ### Fallen Empire Buildings
 
 nhsc_building_nanite_containment: "Nanite Containment Facility"
-nhsc_building_nanite_containment_desc: "A great facility containing large amounts of self-replicating nanites, originally created by a long-dead extremely advanced civilization."
+nhsc_building_nanite_containment_desc: "A grand facility containing large amounts of self-replicating nanites, originally created by an ancient advanced civilization."
 
 nhsc_building_psi_energy_spire: "Psionic Energy Spire"
-nhsc_building_psi_energy_spire_desc: "This massive installation operates immense energies of the material world as well as those pulled from the Shroud."
+nhsc_building_psi_energy_spire_desc: "This massive installation handles immense psychic energies from the material world as well as from the Shroud."
 
 nhsc_building_localized_gravity_fault: "Localized Gravity Fault"
-nhsc_building_localized_gravity_fault_desc: "Long ago, an experiment performed in this area tore a hole in space-time continuum. The fault has since been contained and used to syphon great amounts of resources from other dimensions."
+nhsc_building_localized_gravity_fault_desc: "Long ago, an experiment performed in this area tore a hole in the space-time continuum. The fault has since been contained and used to siphon great amounts of resources from other dimensions."
 
 nhsc_building_crystalline_manufacture: "Crystalline Manufacture"
 nhsc_building_crystalline_manufacture_desc: "A manufacture built using long-lost technologies that assimilated living crystals for nigh-unlimited access to rare and precious resources."
